# AI-_JobPilot

./: .dockerignore  .env.docker  .env.example  .gitignore  AI_Job_Search_Copilot_Project_Plan.md  Dockerfile  README.md  alembic.ini  build_frontend.sh  docker-compose.yml  pyproject.toml  start.bat
.github/workflows/: test.yml
backend/: requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: application_writer.py  form_assistant.py  jd_parser.py  job_matcher.py  resume_customizer.py  resume_parser.py  resume_reviewer.py  search_strategy.py
backend/app/api/: applications.py  auth.py  jobs.py  profiles.py  resumes.py  settings.py  tracker.py
backend/app/auth/: __init__.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/llm/: __init__.py  deepseek_provider.py  factory.py  openai_provider.py  provider.py
backend/app/schemas/: auth.py  job.py  profile.py
backend/app/services/: agent_logger.py  application_service.py  document_export_service.py  job_discovery_service.py  job_matching_service.py  ocr_service.py  profile_service.py  resume_service.py  search_executor.py  settings_service.py  web_fetcher.py
backend/app/utils/: __init__.py  agent_base.py  json_utils.py  profile_utils.py
backend/tests/: conftest.py  test_api_edge_cases.py  test_full_workflow.py  test_llm_settings.py  test_utils.py
extension/: manifest.json  popup.html  popup.js
frontend/: Dockerfile  next.config.ts
templates/: resume_cn_ai_product.docx  resume_cn_operation.docx  resume_cn_tech.docx
(+18 files in other folders)
