[project]
name = "jobpilot"
version = "0.2.0"
description = "AI Job Search Copilot"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
exclude = ["alembic/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
ignore_missing_imports = true
warn_return_any = false
exclude = ["alembic/"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-v --tb=short"
